Fix CTA button long text cutoff issue

--- a/_sass/_buttons.sass
+++ b/_sass/_buttons.sass
@@ -3,6 +3,9 @@
 		color: $button-text
 		background-color: $button-background
 		border: 1px solid $button-border
+		white-space: normal
+		line-height: 1.3
+		padding: 1.3rem 4rem
 		padding: 1rem 4rem
 		font-size: 2.2rem
 		font-weight: bold
