--- a/_sass/_testimonials.sass
+++ b/_sass/_testimonials.sass
@@ -87,6 +87,7 @@
 
 	.cta-button-container
 		margin: 6.7rem 0 3.2rem
+		padding: 0 2rem
 
 @media (max-width: 768px)
 	.testimonials-container-new
